src/parser/snapshots/almond__parser__expression__tests__expr_bp_guard_in.snap
---
source: src/parser/expression.rs
expression: "parse_expr_bp(\"myIdentifier in foo\".into(), 25, false).unwrap().1"
---
{
  "type": "Identifier",
  "name": "myIdentifier",
  "start": 0,
  "end": 12
}
