src/parser/snapshots/almond__parser__expression__tests__expr_bp_infix-4.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"1 + 2 * 3\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "value": 1.0,
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "Literal",
      "value": 2.0,
      "start": 4,
      "end": 5
    },
    "right": {
      "type": "Literal",
      "value": 3.0,
      "start": 8,
      "end": 9
    },
    "start": 4,
    "end": 9
  },
  "start": 0,
  "end": 9
}
